syntax = "proto3";
package btcapi;

message Utxo {
    string txHash = 1;
    int32 vout = 2;
    int64 amount = 3;
    string address = 4;
    string scriptPubKey = 5;
    string derivedPath = 6;
    int64 sequence = 7;
}

message BtcTxInput {
    string to = 1;
    int64 amount = 2;
    repeated Utxo unspents = 3;
    int64 fee = 4;
    uint32 changeAddressIndex = 5;
    string changeAddress = 6;
    string network = 7;
    string segWit = 8;
    string payment = 9;
    string to_dis = 10;
    string from = 11;
    string fee_dis = 12;
    bytes extra_data = 13;
    string path_prefix = 14;
    int32 property_id = 15;
}

message BtcTxOutput {
    string signature = 1;
    string txHash = 2;
    string wtx_id = 3;
}
